# grid-trading

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOY.md  Dockerfile  Dockerfile.rust-vue  RUST_PRODUCTION.md  TRADE_XYZ.md  docker-compose.rust-production.yml  docker-compose.rust-vue.yml  docker-compose.yml  requirements.txt  run_tests.bat  start.bat  开发文档.md
.github/workflows/: tests.yml
backend/: aster_client.py  auth.py  binance_client.py  bybit_client.py  exchange_errors.py  exchange_snapshots.py  fee_rates.py  grid_engine.py  main.py  secret_store.py
contracts/: INVARIANTS.md  README.md  export_contract.py  frontend-api-v1.json  openapi-v1.json
contracts/replay/: compare_json.py  grid-plan-v1.expected.json  grid-plan-v1.json  python_grid_plan_replay.py
frontend/: app.js  index.html  style.css
rust-backend/: Cargo.toml
rust-backend/src/: api.rs  exchange.rs  lib.rs  main.rs  security.rs  web_auth.rs
rust-backend/src/domain/: cancellation.rs  grid_config.rs  instrument.rs  mod.rs  order.rs
rust-backend/src/engine/: armed_strategy.rs  bootstrap.rs  cancellation.rs  coordinator.rs  exchange_inputs.rs  execution_accounting.rs  execution_sync.rs  fee_rates.rs  grid_plan.rs  leverage.rs  mod.rs  preview.rs  reconciliation.rs  runtime.rs  shadow_audit.rs  shadow_collector.rs  strategy_machine.rs  submission.rs  supervisor.rs
rust-backend/src/exchange/: aster.rs  binance.rs  bybit.rs  bybit_codec.rs  codec.rs  configured.rs  execution.rs  protocol.rs  realtime.rs  registry.rs  trade_xyz.rs  trade_xyz_codec.rs
rust-backend/src/persistence/: exchange_config.rs  idempotency.rs  mod.rs  order_ledger.rs  runtime_files.rs  runtime_lease.rs  strategy_catalog.rs  strategy_state.rs
rust-backend/tests/: grid_plan_replay.rs
scripts/: deploy-rust-preview.sh  deploy-rust-production.sh  legacy-cutover-audit.py  provision-rust-auth.py  rollback-to-python.sh  verify-rust-login.py  verify-rust-preview.sh  verify-rust-production.sh
tests/: test_aster_client.py  test_grid_engine.py  test_grid_plan_replay.py  test_multi_grid_server.py  test_order_snapshots.py  test_server.py
vue-frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
vue-frontend/src/: App.test.ts  App.vue  format.ts  styles.css
vue-frontend/src/api/: client.test.ts  client.ts  types.ts
vue-frontend/src/components/: AuthDialog.vue  ExchangeSettingsDialog.vue  GridConfigurationPanel.vue  MarketOverview.vue  StrategyDetailsPanel.vue  StrategyList.vue  StrategyOverview.vue  components.test.ts
vue-frontend/test-support/: mock-api.cjs
