[workspace]
members = ["rust-backend"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
rust_decimal = { version = "1.42.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
