[package]
name = "grid-trading-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
atomic-write-file.workspace = true
axum.workspace = true
hex.workspace = true
hmac.workspace = true
k256.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha3.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
